[gd_scene load_steps=7 format=2]

[ext_resource path="res://spotlight.gd" type="Script" id=1]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_3D.gd" type="Script" id=2]
[ext_resource path="res://audio/lightSwitch.wav" type="AudioStream" id=3]

[sub_resource type="SphereShape" id=1]
radius = 9.35726

[sub_resource type="Animation" id=3]
resource_name = "flicker"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpotLight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.505, 0.308, 0.505 ]
}

[sub_resource type="Animation" id=4]
resource_name = "superFlicker"
tracks/0/type = "value"
tracks/0/path = NodePath("SpotLight:omni_attenuation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.93187, 3.36358, 1.86606, 3.99999 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpotLight:omni_range")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 8.3067, 6.156, 8.954, 6.156 ]
}

[node name="spotlight" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1.20768, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 1 )

[node name="SpotLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
visible = false
light_color = Color( 0.866667, 0.803922, 0.6, 1 )
light_energy = 0.505
shadow_enabled = true
shadow_reverse_cull_face = true
omni_range = 10.6683
omni_attenuation = 1.93187

[node name="Area" type="Area" parent="." groups=["spotlight"]]
collision_layer = 1024
collision_mask = 33

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "flicker"
anims/flicker = SubResource( 3 )
anims/superFlicker = SubResource( 4 )

[node name="changeTimer" type="Timer" parent="."]
wait_time = 40.0
one_shot = true

[node name="lightSwitch" type="AudioStreamPlayer3D" parent="."]
unit_size = 3.0
script = ExtResource( 2 )
samples = [ ExtResource( 3 ) ]
random_strategy = 2
random_volume_range = 0
random_pitch_range = 0.153

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="changeTimer" to="." method="_on_changeTimer_timeout"]
